; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_rtl.c_test_RtlZeroMemory.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_rtl.c_test_RtlZeroMemory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pRtlZeroMemory = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"RtlZeroMemory is not available\0A\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"This is a test!\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"\00his is a test!\00", align 1
@.str.3 = private unnamed_addr constant [16 x i8] c"\00\00is is a test!\00", align 1
@.str.4 = private unnamed_addr constant [16 x i8] c"\00\00\00s is a test!\00", align 1
@.str.5 = private unnamed_addr constant [16 x i8] c"\00\00\00\00 is a test!\00", align 1
@.str.6 = private unnamed_addr constant [16 x i8] c"\00\00\00\00\00is a test!\00", align 1
@.str.7 = private unnamed_addr constant [16 x i8] c"\00\00\00\00\00\00s a test!\00", align 1
@.str.8 = private unnamed_addr constant [16 x i8] c"\00\00\00\00\00\00\00 a test!\00", align 1
@.str.9 = private unnamed_addr constant [16 x i8] c"\00\00\00\00\00\00\00\00a test!\00", align 1
@.str.10 = private unnamed_addr constant [16 x i8] c"\00\00\00\00\00\00\00\00\00 test!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_RtlZeroMemory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_RtlZeroMemory() #0 {
  %1 = load i32, i32* @pRtlZeroMemory, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %5, label %3

3:                                                ; preds = %0
  %4 = call i32 @win_skip(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  br label %26

5:                                                ; preds = %0
  %6 = call i32 @ZERO(i32 0)
  %7 = call i32 @MCMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %8 = call i32 @ZERO(i32 1)
  %9 = call i32 @MCMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  %10 = call i32 @ZERO(i32 2)
  %11 = call i32 @MCMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0))
  %12 = call i32 @ZERO(i32 3)
  %13 = call i32 @MCMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.4, i64 0, i64 0))
  %14 = call i32 @ZERO(i32 4)
  %15 = call i32 @MCMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0))
  %16 = call i32 @ZERO(i32 5)
  %17 = call i32 @MCMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.6, i64 0, i64 0))
  %18 = call i32 @ZERO(i32 6)
  %19 = call i32 @MCMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.7, i64 0, i64 0))
  %20 = call i32 @ZERO(i32 7)
  %21 = call i32 @MCMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.8, i64 0, i64 0))
  %22 = call i32 @ZERO(i32 8)
  %23 = call i32 @MCMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.9, i64 0, i64 0))
  %24 = call i32 @ZERO(i32 9)
  %25 = call i32 @MCMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.10, i64 0, i64 0))
  br label %26

26:                                               ; preds = %5, %3
  ret void
}

declare dso_local i32 @win_skip(i8*) #1

declare dso_local i32 @ZERO(i32) #1

declare dso_local i32 @MCMP(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
